--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">
                     <a href="https://bit.ly/tws-junoon" style="text-decoration: none; color: inherit;">
-                        DevOps (Junoon Batch 8) Starts October 5th (Sat-Sun 9 to 12)
+                        DEVOPS ENGINEER 
+                        AWS CLOUD
+                        KUBERNETES & DOCKER
                     </a>
                 </h1>
                 <!-- Icon Divider-->
@@ -52,7 +54,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Engineer - Trainer - Learner</p>
+                <p class="masthead-subheading font-weight-light mb-0">Engineer - Enthusiast - Learner</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -138,8 +140,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">DevOps Junoon (Batch 8) <br> Starts October 5th (Weekends 9 A.M to 12 P.M)  <br> Covering A-Z of DevOps.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">See you in the Live Sessions. </p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Nawazish Faraz <br> Starts October 5th (Weekends 9 A.M to 12 P.M)  <br> Covering A-Z of DevOps.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">Connect me for more. </p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
